--- a/impressum.html
+++ b/impressum.html
@@ -11,66 +11,30 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, sans-serif;
-            line-height: 1.7;
-            color: #e2e8f0;
+            line-height: 1.7; color: #e2e8f0;
             background: #080812;
             background-image: radial-gradient(ellipse 100% 70% at 50% 0%, rgba(139, 92, 246, 0.15) 0%, transparent 50%);
-            min-height: 100vh;
-            padding: 20px;
+            min-height: 100vh; padding: 20px;
         }
         .container {
-            max-width: 700px;
-            margin: 0 auto;
+            max-width: 700px; margin: 0 auto;
             background: linear-gradient(160deg, rgba(20, 15, 35, 0.95) 0%, rgba(10, 8, 20, 0.98) 100%);
-            padding: 40px;
-            border-radius: 24px;
+            padding: 40px; border-radius: 24px;
             border: 1px solid rgba(139, 92, 246, 0.2);
             box-shadow: 0 0 60px rgba(139, 92, 246, 0.1), 0 20px 40px rgba(0, 0, 0, 0.4);
         }
         .logo { text-align: center; margin-bottom: 30px; }
-        .logo-text {
-            font-family: 'Archivo Black', sans-serif;
-            font-size: 2rem;
-            background: linear-gradient(135deg, #a855f7 0%, #8b5cf6 50%, #6366f1 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-        h1 {
-            font-family: 'Archivo Black', sans-serif;
-            color: #fff;
-            margin-bottom: 30px;
-            font-size: 1.8rem;
-            text-align: center;
-        }
-        h2 {
-            color: #a855f7;
-            margin-top: 30px;
-            margin-bottom: 15px;
-            font-size: 1.1rem;
-            font-weight: 600;
-        }
+        .logo-text { font-family: 'Archivo Black', sans-serif; font-size: 2rem; background: linear-gradient(135deg, #a855f7 0%, #8b5cf6 50%, #6366f1 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; }
+        h1 { font-family: 'Archivo Black', sans-serif; color: #fff; margin-bottom: 30px; font-size: 1.8rem; text-align: center; }
+        h2 { color: #a855f7; margin-top: 30px; margin-bottom: 15px; font-size: 1.1rem; font-weight: 600; }
         p { margin-bottom: 12px; color: #94a3b8; }
         a { color: #a855f7; text-decoration: none; }
         a:hover { text-decoration: underline; }
         strong { color: #e2e8f0; }
-        .info-box {
-            background: rgba(139, 92, 246, 0.1);
-            border: 1px solid rgba(139, 92, 246, 0.2);
-            border-radius: 12px;
-            padding: 20px;
-            margin: 20px 0;
-        }
+        .info-box { background: rgba(139, 92, 246, 0.1); border: 1px solid rgba(139, 92, 246, 0.2); border-radius: 12px; padding: 20px; margin: 20px 0; }
         .info-box p { margin-bottom: 8px; }
         .info-box p:last-child { margin-bottom: 0; }
-        .footer {
-            margin-top: 40px;
-            padding-top: 20px;
-            border-top: 1px solid rgba(139, 92, 246, 0.2);
-            text-align: center;
-            font-size: 0.85rem;
-            color: #64748b;
-        }
+        .footer { margin-top: 40px; padding-top: 20px; border-top: 1px solid rgba(139, 92, 246, 0.2); text-align: center; font-size: 0.85rem; color: #64748b; }
         .footer a { color: #8b5cf6; }
     </style>
 </head>
@@ -86,12 +50,12 @@
             <p><strong>Verantwortlich für den Inhalt:</strong></p>
             <p>Stanisław Pawluczuk</p>
             <p>Jednoosobowa Działalność Gospodarcza (Einzelunternehmen nach polnischem Recht)</p>
-            <p>ul. Świeradowska 47, 02-662 Warszawa, Poland</p>
+            <p>ul. Świeradowska 47, 02-662 Warszawa, Polen</p>
         </div>
 
         <h2>Kontakt</h2>
         <div class="info-box">
-            <p><strong>E-Mail:</strong> <a href="/cdn-cgi/l/email-protection#27404b4850455e40464a4267574a094a42"><span class="__cf_email__" data-cfemail="d0b7bcbfa7b2a9b7b1bdb590a0bdfebdb5">[email&#160;protected]</span></a></p>
+            <p><strong>E-Mail:</strong> <a class="glowby-email" href="#">Loading...</a></p>
         </div>
 
         <h2>Handelsregister</h2>
@@ -102,7 +66,7 @@
         </div>
 
         <h2>EU-Streitschlichtung</h2>
-        <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a href="https://ec.europa.eu/consumers/odr/" target="_blank">https://ec.europa.eu/consumers/odr/</a></p>
+        <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a href="https://ec.europa.eu/consumers/odr/" target="_blank" rel="noopener">https://ec.europa.eu/consumers/odr/</a></p>
         <p>Unsere E-Mail-Adresse finden Sie oben im Impressum.</p>
 
         <h2>Verbraucherstreitbeilegung</h2>
@@ -115,4 +79,12 @@
         <p>Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.</p>
 
         <div class="footer">
-            <p><a href="index.html">Home</a> · <a href="privacy-policy.html">Datenschutz</a
+            <p><a href="index.html">Home</a> &middot; <a href="privacy-policy.html">Datenschutz</a> &middot; <a href="terms-of-service.html">AGB</a> &middot; <a href="support.html">Support</a></p>
+        </div>
+    </div>
+
+    <script>
+    (function(){var u='glowbygame',d='pm.me',e=u+'@'+d;document.querySelectorAll('.glowby-email').forEach(function(el){el.href='mai'+'lto:'+e;el.textContent=e;});})();
+    </script>
+</body>
+</html>
