--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -11,95 +11,37 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, sans-serif;
-            line-height: 1.7;
-            color: #e2e8f0;
+            line-height: 1.7; color: #e2e8f0;
             background: #080812;
             background-image: radial-gradient(ellipse 100% 70% at 50% 0%, rgba(139, 92, 246, 0.15) 0%, transparent 50%);
-            min-height: 100vh;
-            padding: 20px;
+            min-height: 100vh; padding: 20px;
         }
         .container {
-            max-width: 800px;
-            margin: 0 auto;
+            max-width: 800px; margin: 0 auto;
             background: linear-gradient(160deg, rgba(20, 15, 35, 0.95) 0%, rgba(10, 8, 20, 0.98) 100%);
-            padding: 40px;
-            border-radius: 24px;
+            padding: 40px; border-radius: 24px;
             border: 1px solid rgba(139, 92, 246, 0.2);
             box-shadow: 0 0 60px rgba(139, 92, 246, 0.1), 0 20px 40px rgba(0, 0, 0, 0.4);
         }
         .logo { text-align: center; margin-bottom: 30px; }
-        .logo-text {
-            font-family: 'Archivo Black', sans-serif;
-            font-size: 2rem;
-            background: linear-gradient(135deg, #a855f7 0%, #8b5cf6 50%, #6366f1 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-        h1 {
-            font-family: 'Archivo Black', sans-serif;
-            color: #fff;
-            margin-bottom: 10px;
-            font-size: 1.8rem;
-            text-align: center;
-        }
-        .last-updated {
-            color: #64748b;
-            margin-bottom: 30px;
-            font-size: 0.85rem;
-            text-align: center;
-        }
-        h2 {
-            color: #a855f7;
-            margin-top: 35px;
-            margin-bottom: 15px;
-            padding-bottom: 8px;
-            border-bottom: 1px solid rgba(139, 92, 246, 0.3);
-            font-size: 1.2rem;
-            font-weight: 600;
-        }
-        h3 {
-            color: #c4b5fd;
-            margin-top: 20px;
-            margin-bottom: 10px;
-            font-size: 1rem;
-            font-weight: 600;
-        }
+        .logo-text { font-family: 'Archivo Black', sans-serif; font-size: 2rem; background: linear-gradient(135deg, #a855f7 0%, #8b5cf6 50%, #6366f1 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; }
+        h1 { font-family: 'Archivo Black', sans-serif; color: #fff; margin-bottom: 10px; font-size: 1.8rem; text-align: center; }
+        .last-updated { color: #64748b; margin-bottom: 30px; font-size: 0.85rem; text-align: center; }
+        h2 { color: #a855f7; margin-top: 35px; margin-bottom: 15px; padding-bottom: 8px; border-bottom: 1px solid rgba(139, 92, 246, 0.3); font-size: 1.2rem; font-weight: 600; }
+        h3 { color: #c4b5fd; margin-top: 20px; margin-bottom: 10px; font-size: 1rem; font-weight: 600; }
         p { margin-bottom: 15px; color: #94a3b8; }
         ul, ol { margin-bottom: 15px; padding-left: 25px; color: #94a3b8; }
         li { margin-bottom: 8px; }
         a { color: #a855f7; text-decoration: none; }
         a:hover { text-decoration: underline; }
         strong { color: #e2e8f0; }
-        .highlight-box {
-            background: rgba(139, 92, 246, 0.1);
-            border-left: 3px solid #8b5cf6;
-            padding: 15px 20px;
-            margin: 20px 0;
-            border-radius: 0 12px 12px 0;
-        }
+        .highlight-box { background: rgba(139, 92, 246, 0.1); border-left: 3px solid #8b5cf6; padding: 15px 20px; margin: 20px 0; border-radius: 0 12px 12px 0; }
         .highlight-box p { margin-bottom: 0; }
-        .warning-box {
-            background: rgba(251, 191, 36, 0.1);
-            border-left: 3px solid #fbbf24;
-            padding: 15px 20px;
-            margin: 20px 0;
-            border-radius: 0 12px 12px 0;
-        }
+        .warning-box { background: rgba(251, 191, 36, 0.1); border-left: 3px solid #fbbf24; padding: 15px 20px; margin: 20px 0; border-radius: 0 12px 12px 0; }
         .warning-box p { color: #fcd34d; margin-bottom: 0; }
-        .footer {
-            margin-top: 40px;
-            padding-top: 20px;
-            border-top: 1px solid rgba(139, 92, 246, 0.2);
-            text-align: center;
-            font-size: 0.85rem;
-            color: #64748b;
-        }
+        .footer { margin-top: 40px; padding-top: 20px; border-top: 1px solid rgba(139, 92, 246, 0.2); text-align: center; font-size: 0.85rem; color: #64748b; }
         .footer a { color: #8b5cf6; }
-        @media (max-width: 600px) {
-            .container { padding: 24px 20px; }
-            h1 { font-size: 1.5rem; }
-        }
+        @media (max-width: 600px) { .container { padding: 24px 20px; } h1 { font-size: 1.5rem; } }
     </style>
 </head>
 <body>
@@ -107,7 +49,7 @@
         <div class="logo"><span class="logo-text">GLOWBY</span></div>
         
         <h1>Terms of Service</h1>
-        <p class="last-updated">Last Updated: January 25, 2026</p>
+        <p class="last-updated">Last Updated: February 6, 2026</p>
 
         <div class="highlight-box">
             <p><strong>Summary:</strong> Play fair, have fun, respect others. Virtual items are non-refundable. We're not liable for things outside our control.</p>
@@ -117,7 +59,7 @@
         <p>By downloading, installing, or playing Glowby ("the Game"), you agree to these Terms of Service. If you disagree with any part, please do not use the Game.</p>
 
         <h2>2. About the Service</h2>
-        <p>Glowby is a mobile puzzle game developed by Stanisław Pawluczuk, operating as a sole proprietorship under Polish law. The Game combines elements of Tetris and 2048 in a unique, timed puzzle experience.</p>
+        <p>Glowby is a mobile puzzle game developed by Stanisław Pawluczuk, operating as a sole proprietorship under Polish law. The Game combines tile-dropping mechanics with 2048-style number merging in a unique, timed puzzle experience.</p>
 
         <h2>3. Age Requirements</h2>
         <ul>
@@ -134,7 +76,6 @@
             <li>You may create one account per person</li>
             <li>Usernames must not be offensive, impersonate others, or violate trademarks</li>
         </ul>
-
         <h3>4.2 Account Security</h3>
         <p>You are responsible for maintaining the security of your account. We are not liable for unauthorized access resulting from your failure to protect your credentials.</p>
 
@@ -145,13 +86,12 @@
             <li>Coins have no real-world monetary value</li>
             <li>Coins cannot be exchanged, transferred, or refunded</li>
         </ul>
-
         <h3>5.2 In-App Purchases</h3>
         <ul>
             <li>All purchases are final and non-refundable</li>
-            <li>Prices are displayed in your local currency</li>
+            <li>Prices are displayed in your local currency via Apple StoreKit</li>
             <li>Purchases are processed through Apple App Store</li>
-            <li>Refund requests must be directed to Apple</li>
+            <li>Refund requests must be directed to Apple at <a href="https://reportaproblem.apple.com" target="_blank" rel="noopener">reportaproblem.apple.com</a></li>
         </ul>
 
         <div class="warning-box">
@@ -171,7 +111,7 @@
         </ul>
 
         <h2>7. Intellectual Property</h2>
-        <p>All content in Glowby—including but not limited to graphics, music, code, and game mechanics—is owned by Stanisław Pawluczuk or licensed to us. You may not copy, modify, distribute, or create derivative works without written permission.</p>
+        <p>All content in Glowby &mdash; including but not limited to graphics, music, code, and game mechanics &mdash; is owned by Stanisław Pawluczuk or licensed to us. You may not copy, modify, distribute, or create derivative works without written permission.</p>
 
         <h2>8. User Content</h2>
         <p>By submitting usernames or other content, you grant us a non-exclusive, worldwide, royalty-free license to use, display, and distribute that content within the Game's services (e.g., leaderboards).</p>
@@ -209,12 +149,24 @@
 
         <h2>14. Contact</h2>
         <div class="highlight-box">
-            <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-protection#781f14170f1a011f19151d38081556151d"><span class="__cf_email__" data-cfemail="bed9d2d1c9dcc7d9dfd3dbfeced390d3db">[email&#160;protected]</span></a></p>
+            <p><strong>Email:</strong> <a class="glowby-email" href="#">Loading...</a></p>
+            <p><strong>Address:</strong> ul. Świeradowska 47, 02-662 Warszawa, Poland</p>
         </div>
 
         <div class="footer">
             <p>Stanisław Pawluczuk | Jednoosobowa Działalność Gospodarcza</p>
+            <p>ul. Świeradowska 47, 02-662 Warszawa, Poland</p>
             <p>NIP: 1231476789 | REGON: 387249521</p>
             <p style="margin-top: 15px;">
-                <a href="index.html">Home</a> · 
-                <a href="privacy-policy.htm
+                <a href="index.html">Home</a> &middot; 
+                <a href="privacy-policy.html">Privacy Policy</a> &middot; 
+                <a href="support.html">Support</a>
+            </p>
+        </div>
+    </div>
+
+    <script>
+    (function(){var u='glowbygame',d='pm.me',e=u+'@'+d;document.querySelectorAll('.glowby-email').forEach(function(el){el.href='mai'+'lto:'+e;el.textContent=e;});})();
+    </script>
+</body>
+</html>
