--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glowby - Drop, Match & Merge to 2048!</title>
-    <meta name="description" content="Glowby is a free puzzle game combining Tetris-style dropping with 2048 merging. Race against time, create combos, and compete on global leaderboards!">
+    <meta name="description" content="Glowby is a free puzzle game combining tile-dropping with 2048-style merging. Race against time, create combos, and compete on global leaderboards!">
     <meta name="keywords" content="puzzle game, 2048, merge, number game, brain game, casual game, iOS game">
     <link rel="canonical" href="https://stanstanislaw.github.io/glowby/">
     
@@ -177,16 +177,16 @@
 </head>
 <body>
     <section class="hero">
-        <div class="logo">🧠</div>
+        <div class="logo">&#x1F9E0;</div>
         <h1>Glowby</h1>
-        <p class="tagline">Drop, Match & Merge to 2048!</p>
+        <p class="tagline">Drop, Match &amp; Merge to 2048!</p>
         <p style="color: #64748b; max-width: 500px; margin: 0 auto 30px;">
             A fresh twist on number puzzles. Drop tiles, merge matching numbers, race the timer, and compete for the highest score!
         </p>
         
-        <!-- App Store Badge - Replace with actual link when published -->
+        <!-- App Store Badge - Replace href with actual App Store link when published -->
         <div class="app-badge">
-            <a href="#" target="_blank">
+            <a href="#" target="_blank" rel="noopener">
                 <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83" alt="Download on the App Store">
             </a>
         </div>
@@ -194,34 +194,34 @@
 
     <section class="features">
         <div class="feature">
-            <div class="feature-icon">🎮</div>
+            <div class="feature-icon">&#x1F3AE;</div>
             <h3>Easy to Learn</h3>
-            <p>Simple controls - just tap to drop tiles. Master it in seconds, enjoy it for hours!</p>
+            <p>Simple one-tap controls &mdash; just tap a column to drop tiles. Master it in seconds, enjoy it for hours!</p>
         </div>
         <div class="feature">
-            <div class="feature-icon">⏱️</div>
+            <div class="feature-icon">&#x23F1;&#xFE0F;</div>
             <h3>Race the Timer</h3>
             <p>Every move counts! Drop tiles before time runs out. The faster you think, the longer you survive.</p>
         </div>
         <div class="feature">
-            <div class="feature-icon">🔥</div>
+            <div class="feature-icon">&#x1F525;</div>
             <h3>Chain Combos</h3>
-            <p>Create massive chain reactions! Merge multiple tiles in one drop for combo multipliers.</p>
+            <p>Create massive chain reactions with screen shake, particle explosions, and haptic feedback!</p>
         </div>
         <div class="feature">
-            <div class="feature-icon">🏆</div>
-            <h3>Global Leaderboards</h3>
-            <p>Compete with players worldwide! Climb the ranks and become the ultimate puzzle master.</p>
+            <div class="feature-icon">&#x1F3C6;</div>
+            <h3>Game Center</h3>
+            <p>Compete on global leaderboards and unlock 11 achievements. Climb the ranks and become the ultimate puzzle master!</p>
         </div>
         <div class="feature">
-            <div class="feature-icon">✨</div>
-            <h3>Unlock Skins</h3>
-            <p>Customize your Glowby with unlockable skins! Earn them through achievements or purchase with coins.</p>
+            <div class="feature-icon">&#x2728;</div>
+            <h3>16 Skins</h3>
+            <p>Customize Glowby with unique skins, each with their own visual effects and sound design. Earn them or unlock in the shop!</p>
         </div>
         <div class="feature">
-            <div class="feature-icon">🌍</div>
-            <h3>10 Languages</h3>
-            <p>Play in English, German, French, Spanish, Italian, Portuguese, Ukrainian, Japanese, Korean, or Chinese!</p>
+            <div class="feature-icon">&#x1F310;</div>
+            <h3>11 Languages</h3>
+            <p>Play in English, German, French, Spanish, Italian, Portuguese, Polish, Ukrainian, Japanese, Korean, or Chinese!</p>
         </div>
     </section>
 
@@ -241,12 +241,12 @@
             <div class="step">
                 <div class="step-number">3</div>
                 <h4>Beat the Timer</h4>
-                <p>Drop before time runs out! ⏱️</p>
+                <p>Drop before time runs out! &#x23F1;&#xFE0F;</p>
             </div>
             <div class="step">
                 <div class="step-number">4</div>
-                <h4>Avoid Asteroids!</h4>
-                <p>Don't let tiles reach the danger zone! ☄️</p>
+                <h4>Avoid the Asteroid Belt!</h4>
+                <p>Don't let tiles reach the top! &#x2604;&#xFE0F;</p>
             </div>
             <div class="step">
                 <div class="step-number">5</div>
@@ -260,7 +260,7 @@
         <h2>Ready to Play?</h2>
         <p>Download Glowby free on the App Store and start your puzzle journey!</p>
         <div class="app-badge">
-            <a href="#" target="_blank">
+            <a href="#" target="_blank" rel="noopener">
                 <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83" alt="Download on the App Store">
             </a>
         </div>
@@ -272,21 +272,25 @@
             <a href="terms-of-service.html">Terms of Service</a>
             <a href="support.html">Support</a>
             <a href="impressum.html">Impressum</a>
-            <a href="commercial-disclosure-japan.html">特定商取引法</a>
+            <a href="commercial-disclosure-japan.html">&#x7279;&#x5B9A;&#x5546;&#x53D6;&#x5F15;&#x6CD5;</a>
         </div>
         <p class="copyright">
-            © 2026 Stanisław Pawluczuk. All rights reserved.<br>
-            Glowby and the Glowby character are trademarks of Stanisław Pawluczuk.
+            &copy; 2026 Stanis&#x0142;aw Pawluczuk. All rights reserved.<br>
+            Glowby and the Glowby character are trademarks of Stanis&#x0142;aw Pawluczuk.
         </p>
         <p style="color: #64748b; font-size: 0.8rem; margin-top: 15px;">
-            Stanisław Pawluczuk | Jednoosobowa Działalność Gospodarcza<br>
-            [YOUR_VIRTUAL_OFFICE_ADDRESS]<br>
+            Stanis&#x0142;aw Pawluczuk | Jednoosobowa Dzia&#x0142;alno&#x015B;&#x0107; Gospodarcza<br>
+            ul. &#x015A;wieradowska 47, 02-662 Warszawa, Poland<br>
             NIP: 1231476789 | REGON: 387249521<br>
-            Contact: <a href="mailto:glowbygame@pm.me" style="color: #8b5cf6;">glowbygame@pm.me</a>
+            Contact: <a class="glowby-email" href="#" style="color: #8b5cf6;">Loading...</a>
         </p>
         <p class="languages">
-            🌍 Available in: English • Deutsch • Français • Español • Italiano • Português • Українська • 日本語 • 한국어 • 简体中文
+            &#x1F310; Available in: English &bull; Deutsch &bull; Fran&#xE7;ais &bull; Espa&#xF1;ol &bull; Italiano &bull; Portugu&#xEA;s &bull; Polski &bull; &#x0423;&#x043A;&#x0440;&#x0430;&#x0457;&#x043D;&#x0441;&#x044C;&#x043A;&#x0430; &bull; &#x65E5;&#x672C;&#x8A9E; &bull; &#xD55C;&#xAD6D;&#xC5B4; &bull; &#x7B80;&#x4F53;&#x4E2D;&#x6587;
         </p>
     </footer>
+
+    <script>
+    (function(){var u='glowbygame',d='pm.me',e=u+'@'+d;document.querySelectorAll('.glowby-email').forEach(function(el){el.href='mai'+'lto:'+e;el.textContent=e;});})();
+    </script>
 </body>
 </html>
